base-apps/chores-tracker-frontend/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: chores-tracker-frontend
  namespace: chores-tracker-frontend
  labels:
    app: chores-tracker-frontend
    component: frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: chores-tracker-frontend
